# lm3s6965evb

./: .gdbinit  Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
