[package]
name = "lm3s6965evb"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>", "Hideki Sekine <sekineh@me.com>"]

[features]
semihosting = ["cortex-m-semihosting"]

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
panic-abort = "0.2.0"
cortex-m-semihosting = { version = "0.3.1", optional = true }
